--- a/exercicios/023/tabela02.html
+++ b/exercicios/023/tabela02.html
@@ -39,6 +39,11 @@
         tbody tr:nth-child(2n){
             background-color: rgba(128, 128, 128, 0.664);
         }
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
+        }
 
         
     </style>
