atalualizado exercicos de media

--- a/exercicios/026/mq004/index.html
+++ b/exercicios/026/mq004/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Criando media Query</h1>
+        <img id="cell" src="imagens/icon-phone.png" alt="Acessando smartphone">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="Acessando via Tablete">
+        <img id="print" src="imagens/icon-print.png" alt="Impressão">
+        <img id="pc" src="imagens/icon-pc.png" alt="Versão para desktop">
+        <img id="tv" src="imagens/icon-tv.png" alt="Versão para tv">
+
+    </main>
 </body>
 </html>
