--- a/exercicios/027/flexbox003/index.html
+++ b/exercicios/027/flexbox003/index.html
@@ -10,7 +10,7 @@
             display: flex;
            /* flex-direction: row;
             flex-wrap: wrap-reverse; igual o de baixo*/ 
-            flex-flow: row wrap-reverse;
+            flex-flow: row wrap;
            
             height: 300px;
         }
