--- a/exercicios/027/flexbox004/index.html
+++ b/exercicios/027/flexbox004/index.html
@@ -8,13 +8,15 @@
         .container {
             background-color: lightgray;
             display: flex;
-            flex-flow: row nowrap;
-            justify-content: flex-end;
+          flex-flow: row wrap;
+          justify-content: space-around;
+          height: 300px;
+          align-items: center;
         }
         .item {
             background-color: rgb(74, 74, 230);
             border: 1px solid black;
-            
+            padding: 10px;
             text-align: center;
         }
     </style>
