--- a/exercicios/flexbox013-menu/index.html
+++ b/exercicios/flexbox013-menu/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Flexbox</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile.css" media="screen and(max-width: 500px)">
-</head>
+    <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 580px)">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu"
 <body>
     <header>
         <h1>Meu site</h1>
+        <span class="material-symbols-outlined" id="burguer" onclick="clickMenu()">menu</span>
         <nav>
             <a href="">Opção 1</a>
             <a href="">opção 2</a>
@@ -25,6 +26,16 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, totam impedit fugit repellendus reprehenderit esse eius veritatis modi, libero obcaecati autem corrupti ea sint. Ullam odit consequuntur magnam laborum ipsam Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod vel nihil voluptatum? Qui eum sapiente rerum tenetur, architecto, labore ipsa exercitationem ad quos fuga veniam assumenda? Ipsa rerum odit voluptate.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque iusto amet cum impedit veniam praesentium dolorum veritatis alias, maxime quo? Odit ut quos assumenda perferendis in ipsa amet temporibus itaque!</p>
         </main>
+        <script>
+            function clickMenu(){
+                if (itens.style.display == 'block'){
+                    itens.style.display = 'none'
+                }
+                else{
+                    itens.style.display ='block'
+                }
+            }
+        </script>
     
 </body>
 </html>
