terminado o exercicio de flexbox

--- a/exercicios/027/flexbox014-conteudo/index.html
+++ b/exercicios/027/flexbox014-conteudo/index.html
@@ -12,7 +12,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis facere esse perspiciatis voluptate optio a, cum laboriosam voluptas, officiis et sed similique quod autem ullam, magnam nobis iure eius tenetur.</p>
     </header>
     <main>
-        <div class="flex-container">
+        <section class="flex-container">
             <article class="media-text">
                 <div class="text">
                     <h2>Elemento media -> texto</h2>
@@ -41,13 +41,13 @@
 
             </article>
 
-        </div> <!--fim da class : Flex-container-->
-        <div class="normal">
+        </section> <!--fim da class : Flex-container-->
+        <section class="normal">
             <h2>conteudo normal</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. In laboriosam veritatis optio aliquid ullam corporis error voluptate omnis quod, debitis, id dolorem iste, maiores hic officia. Vel est earum ipsam Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, ut fugiat doloribus perferendis delectus eaque sint quod obcaecati ad! Ipsam alias cum distinctio libero quis veniam, eum harum maiores nostrum Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos ea adipisci praesentium dolore quas veritatis ex incidunt veniam, deleniti blanditiis optio impedit nihil porro vel natus, debitis suscipit odit aspernatur.
             </p>
-        </div>
+        </section>
     </main>
     
 </body>
