--- a/exercicios/025/forms010.html
+++ b/exercicios/025/forms010.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Formulario</h1>
-    <form action="" method="get">
+    <form action="cadastro.php" method="get">
         <p>
             <label for="iano">Em que ano você nasceu?</label>
             <input type="number" name="ano" id="iano" value="2000" min="1900" max="2025" oninput="calcIdade()">
